compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_record_field_2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 963
expression: "\npub type Box(a) { Box(inner: a) }\npub fn main(box: Box(Box(Int))) { box.inner.unknown }"

---
error: Unknown record field
  ┌─ /src/one/two.gleam:3:35
  │
3 │ pub fn main(box: Box(Box(Int))) { box.inner.unknown }
  │                                   ^^^^^^^^^^^^^^^^^ Did you mean `inner`?

The value being accessed has this type:

    Box(Int)

It has these fields:

    .inner

